kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "internal.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "10.20.0.127"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.20.0.127"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: "${SECRET_DOMAIN/./-}-production-tls"
            namespace: cert-manager
      allowedRoutes:
        namespaces:
          from: All
