kubernetes/apps/network/envoy-gateway/config/envoy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compression:
    - type: Zstd
    - type: Brotli
    - type: Gzip
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
  responseOverride:
    # Note: This causes issues with autobrr 403 redirects to the login page.
    # - match:
    #     statusCodes:
    #       - type: Value
    #         value: 403
    #   redirect:
    #     scheme: https
    #     hostname: "error-pages.${SECRET_DOMAIN}"
    #     path:
    #       type: ReplaceFullPath
    #       replaceFullPath: /403.html
    #     statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 404
      redirect:
        scheme: https
        hostname: "error-pages.${SECRET_DOMAIN}"
        path:
          type: ReplaceFullPath
          replaceFullPath: /404.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 500
      redirect:
        scheme: https
        hostname: "error-pages.${SECRET_DOMAIN}"
        path:
          type: ReplaceFullPath
          replaceFullPath: /500.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 502
      redirect:
        scheme: https
        hostname: "error-pages.${SECRET_DOMAIN}"
        path:
          type: ReplaceFullPath
          replaceFullPath: /502.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 503
      redirect:
        scheme: https
        hostname: "error-pages.${SECRET_DOMAIN}"
        path:
          type: ReplaceFullPath
          replaceFullPath: /503.html
        statusCode: 302
    - match:
        statusCodes:
          - type: Value
            value: 504
      redirect:
        scheme: https
        hostname: "error-pages.${SECRET_DOMAIN}"
        path:
          type: ReplaceFullPath
          replaceFullPath: /504.html
        statusCode: 302
